--- a/composer.json
+++ b/composer.json
@@ -39,15 +39,18 @@
     },
     "require": {
         "php": "^7.1",
+        "doctrine/annotations": "^1.8",
         "zendframework/zend-component-installer": "^2.1.1",
         "zendframework/zend-config-aggregator": "^1.0",
         "zendframework/zend-diactoros": "^1.7.1 || ^2.0",
         "zendframework/zend-expressive": "^3.0.1",
         "zendframework/zend-expressive-helpers": "^5.0",
-        "zendframework/zend-stdlib": "^3.1",
-        "zendframework/zend-servicemanager": "^3.3",
         "zendframework/zend-expressive-zendrouter": "^3.0",
-        "zendframework/zend-expressive-zendviewrenderer": "^2.0"
+        "zendframework/zend-expressive-zendviewrenderer": "^2.0",
+        "zendframework/zend-form": "^2.14",
+        "zendframework/zend-servicemanager": "^3.3",
+        "zendframework/zend-stdlib": "^3.1",
+        "zendframework/zend-validator": "^2.12"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0.1",
