--- a/composer.json
+++ b/composer.json
@@ -44,10 +44,12 @@
         "zendframework/zend-config-aggregator": "^1.0",
         "zendframework/zend-diactoros": "^1.7.1 || ^2.0",
         "zendframework/zend-expressive": "^3.0.1",
+        "zendframework/zend-expressive-authentication-oauth2": "^1.2",
         "zendframework/zend-expressive-helpers": "^5.0",
         "zendframework/zend-expressive-zendrouter": "^3.0",
         "zendframework/zend-expressive-zendviewrenderer": "^2.0",
         "zendframework/zend-form": "^2.14",
+        "zendframework/zend-problem-details": "^1.0",
         "zendframework/zend-servicemanager": "^3.3",
         "zendframework/zend-stdlib": "^3.1",
         "zendframework/zend-validator": "^2.12"
